--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
-qrcode[pil]==8.2Add commentMore actions
+qrcode[pil]==8.2
 opencv-python==4.11.0.86
-pyzbar==0.1.9
+opencv-contrib-python==4.11.0.86
 sentence-transformers==4.1.0
 numpy==1.26.4
 openai==1.82.0
 tqdm==4.67.1
 faiss-cpu==1.7.4
 Pillow==11.2.1
+PyPDF2==3.0.1
+python-dotenv==1.1.0
