--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,7 @@ faiss-cpu==1.7.4
 Pillow==11.2.1
 PyPDF2==3.0.1
 python-dotenv==1.1.0
+beautifulsoup4
+ebooklib
+google-generativeai==0.8.5
+anthropic~=0.52.1
