--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,7 @@
 include README.md
 include LICENSE
 include requirements.txt
-recursive-include memvid *.py
+recursive-include framerecall *.py
 recursive-include examples *.py
 recursive-include tests *.py
 global-exclude __pycache__ *.pyc *.pyo *.swp .DS_Store
